# vita_core_api

./: LICENSE.md  README.md  build.cake
source/: CMakeLists.txt  test_vita_core_api.cpp  vita_core_api.h  vita_core_api.hpp  vita_core_api_common.cpp  vita_core_api_windows.cpp  vita_internal_windows.cpp
source/cmake/modules/: use_msvc_project_config.cmake
